--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="main-body">
       <form action="">
-        <input type="number" placeholder="возраст авто 3-5" id="age" />
+        <input type="number" placeholder="Возраст авто" id="age" />
         <br /><br />
-        <input type="number" placeholder="стоимость авто в евро" id="price" />
+        <input type="number" placeholder="Стоимость авто в евро" id="price" />
         <br /><br />
         <div class="container">
           <input type="radio" name="first" value="fuel" checked />Топливо
@@ -23,7 +23,7 @@
           <input type="radio" name="second" value="entity" />Юр лицо
         </div>
         <br /><br />
-        <input type="number" placeholder="объем см3" id="capacity" />
+        <input type="number" placeholder="Объем двигателя" id="capacity" />
         <br /><br />
         <div class="container">
           <input type="radio" name="third" checked value="petrol" />Бензин
