--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </div>
     <div class="result">
       <h3>Таможенная пошлина: <span id="res"></span></h3>
+      <h3>Утилизационный сбор: <span id="sbor"></span></h3>
     </div>
 
     <script src="new.js"></script>
